infrastructure/openshift/test/cv-DeploymentConfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: TEST
  name: cv-test
spec:
  replicas: 1
  selector:
    app: TEST
    deploymentconfig: cv-test
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: TEST
        deploymentconfig: cv-test
    spec:
      containers:
        - env:
          - name: PORT
            value: '4000'
          - name: APM_SERVER
            value: 'https://f7a3f8bb7ac7404eb669a8798e460701.apm.eu-west-1.aws.cloud.es.io:443'
          - name: APM_TOKEN
            valueFrom:
              secretKeyRef:
                name: apm
                key: token
          - name: APP_NAME
            value: mydata-cv api
          - name: NODE_ENV
            value: test
          - name: OPERATOR_URL
            value: 'http://operator-test.my-data.svc:3000'
          - name: POSTGRES_USER
            value: postgresuser
          - name: POSTGRES_PASSWORD
            value: postgrespassword
          - name: POSTGRES_DB
            value: cv
          - name: DATABASE_URL
            value: postgres://postgresuser:postgrespassword@postgresql-cv-test.my-data.svc:5432/cv
          - name: REDIS
            value: 'redis://:fubar@redis-test.my-data.svc:6379/'
          - name: CLIENT_ID
            value: cv-test.dev.services.jtech.se
          image: cv:test
          imagePullPolicy: Always
          name: cv-test
          ports:
            - containerPort: 4000
              name: http
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - cv-test
        from:
          kind: ImageStreamTag
          name: 'cv:test'
      
      type: ImageChange
