infrastructure/openshift/test/natreg-Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: TEST
  name: natreg-test
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: TEST
    deploymentconfig: natreg-test
  type: ClusterIP
