infrastructure/openshift/test/operator-Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: TEST
  name: operator-test
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: TEST
    deploymentconfig: operator-test
  type: ClusterIP
